feat: Upgraded to Java 21 (#104)